ui-template/control-plane/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web
  labels:
    app.kubernetes.io/part-of: kub-home-lab
