ui-template/control-plane/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: web
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: kub-home-lab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: web
    app.kubernetes.io/instance: web
  ports:
    - name: http
      port: 80
      targetPort: http
